# 2048

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: cargo_check.yml
src/: colors.rs  main.rs
